# friday

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  setup.sh
friday/: .env  .gitignore
friday/src/: database.rs  main.rs  route.rs  template.rs
friday/templates/: base.html  index.html  modal.scss
friday/variables/: color.scss
nginx/config/: nginx.conf
src/: config.rs
templates/: modal.html
